# MLOps_HW1_Mercado

./: README.md  repository.py  test_pipeline.py
dagster-env/: pyvenv.cfg
data/: 30_yr_stock_market_data.csv
data_preprocessing/: new_file.rtf
notebooks/: data_preprocessing.py  feature_engineering.py  imports.py  model_training.py  pairs_trading.ipynb
smercado_hw2/: README.md  pyproject.toml  setup.cfg  setup.py
smercado_hw2/smercado_hw2/: definitions.py
solids/: data_preprocessing.py  feature_engineering.py  imports.py  model_training.py
