[project]
name = "smercado_hw2"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.9,<3.13"
dependencies = [
    "dagster",
    "dagster-cloud",
]

[project.optional-dependencies]
dev = [
    "dagster-webserver", 
    "pytest",
]

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.dagster]
module_name = "smercado_hw2.definitions"
project_name = "smercado_hw2"

[tool.setuptools.packages.find]
exclude=["smercado_hw2_tests"]
